tests/baselines/reference/esDecorators-classDeclaration-fields-nonStaticAbstractAccessor(target=esnext).errors.txt
esDecorators-classDeclaration-fields-nonStaticAbstractAccessor.ts(6,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-fields-nonStaticAbstractAccessor.ts(7,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-fields-nonStaticAbstractAccessor.ts(8,5): error TS1206: Decorators are not valid here.


==== esDecorators-classDeclaration-fields-nonStaticAbstractAccessor.ts (3 errors) ====
    declare let dec: any;
    
    const field3 = "field3";
    
    abstract class C {
        @dec(1) abstract accessor field1: number;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(2) abstract accessor ["field2"]: number;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(3) abstract accessor [field3]: number;
        ~
!!! error TS1206: Decorators are not valid here.
    }
    